--- a/Maude.tex
+++ b/Maude.tex
@@ -2,22 +2,22 @@
 
 \thesischapter{The Modelling of the European Rail Traffic Management System Using Real Time Maude}{The Modelling of ERTMS Using Real Time Maude}\label{chap:modelertms}
 
-In the following we present the Maude \cite{MC03,Maude} and Real Time Maude \cite{PO02,PO04,RTMaude} tools and describe how they can be used model the ERTMS system (See chapter \ref{chapter:ERTMS}).   We begin by giving a general introduction to Maude and Real Time Maude and then describe how each of the 3 subsystems (trains, the interlocking and the RBC) are specified following the hybrid automata formalisation found in chapter \ref{chap:hybrid}. Each of these individual components are modelled using object oriented specification. We define classes representing each of the subsystems and then rewrite rules are used to give objects from these classes behaviour. The  built-in message construct of the Real Time Maude system are used to define communication between the subsystems. 
+In the following we present the Maude \cite{MC03,Maude} and Real Time Maude \cite{PO02,PO04,RTMaude} tools and describe how they can be used model the ERTMS system (See chapter \ref{chapter:ERTMS}).   We begin by giving a general introduction to Maude and Real Time Maude and then describe how each of the three subsystems (trains, the interlocking and the RBC) are specified following the hybrid automata formalisation found in chapter \ref{chap:hybrid}. Each of these individual components is modelled as an object oriented specification. We define classes representing each of the subsystems and then rewrite rules are used to give objects behaviour. The  built-in message construct of the Real Time Maude system is used to define communication between the subsystems. 
 
 \subsection*{Related Work}
-The Maude System has been used for a variety of specification and verification tasks. Hardware such has microprocessors has been specified and verified \cite{NH00}. A distributed sensor network employing the OGDC algorithm has been modelled and verified using Real Time Maude \cite{PO07}. The modelling of the progression of time over the sensor network has inspired the distribution of in our ERTMS model. The Real Time Maude system can also be used for simulation and analysis of systems as seen in the work on the CASH Scheduling Algorithm \cite{PO06}. 
+The Maude system has been used for a variety of specification and verification tasks. Hardware such has microprocessors has been specified and verified \cite{NH00}. A distributed sensor network employing the OGDC algorithm has been modelled and verified using Real Time Maude \cite{PO07}. The modelling of the progression of time over the sensor network has inspired the distribution of in our ERTMS model. The Real Time Maude system can also be used for simulation and analysis of systems as seen in the work on the CASH Scheduling Algorithm \cite{PO06}. 
 
-On the front of hybrid automata, ETCS has been verified in the form of Hybrid Automata by translating the automata into a program and then performing model checking using the post condition calculus \cite{DI13}. The Hi-Maude system \cite{MF11} is an extension of Real Time Maude designed specifically modelling interacting hybrid systems and as such it can handle differential equations. It has been used in a case study to model the effects of extreme heat on the human body \cite{MF12}. It is geared towards systems of a highly dynamic nature and may be overkill for a system such as ERTMS with a large discrete component; however a comparison of the approaches might be still interesting as future work.
+ETCS has been verified in the form of hybrid automata by translating the automata into a program and then performing model checking using the post condition calculus \cite{DI13}. The Hi-Maude system \cite{MF11} is an extension of Real Time Maude designed specifically for modelling interacting hybrid systems and as such it can handle differential equations. It has been used in a case study to model the effects of extreme heat on the human body \cite{MF12}. It is geared towards systems of a highly dynamic nature and may be overkill for a system such as ERTMS with a large discrete component; however a comparison of the approaches might still be interesting as future work.
 
 
-There have been several attempts to model and verify parts of the ERTMS system. The scale of the system and differences in implementations from one country to another both make its formalisation challenging. A subset of the systems requirements specification of ERTMS in UML consisting of high level discrete modes and transitions was captured, formalised and verified using the SMV model checker \cite{MG14}. A variety of properties were checked including safety and liveness which were formalised using modes of the system. One safety condition  "the ETCS on-board never leaves the TRIP mode (TR) before the driver has acknowledged the trip and the train has stopped"\footnote{a train enters the TRIP mode after it has over run its stopping point.}, was formalised as an LTL formula with a boolean variable to represent that the train has stopped, it was then successfully verified using SMV. Our work attempts to capture the more concrete behaviour of the overall system including the physical behaviour of trains such as their speed and that of the highly safety critical interface between ERTMS and the interlocking. 
+There have been several attempts to model and verify parts of the ERTMS system. The scale of the system and differences in implementations from one country to another both make its formalisation challenging. A subset of the systems requirements specification of ERTMS in UML consisting of high level discrete modes and transitions was captured, formalised and verified using the SMV model checker \cite{MG14}. A variety of properties were checked including safety and liveness which were formalised using modes of the system. One safety condition -- the ETCS on-board never leaves the TRIP mode (TR) before the driver has acknowledged the trip and the train has stopped\footnote{a train enters the TRIP mode after it has over run its stopping point.} -- was formalised as an LTL formula with a boolean variable to represent that the train has stopped; it was then successfully verified using SMV. Our work attempts to capture the more concrete behaviour of the overall system including the physical behaviour of trains such as their speed and that of the highly safety critical interface between ERTMS and the interlocking. 
 
-There has been a large amount of work on the modelling and verification of ETCS using differential dynamic logic \cite{AP08} in the Keymaera tool \cite{AP08b}. The RBC handover where a train moves from the area governed by one RBC into another has been modelled in \cite{YL11}. The properties proven in this study include non-derailment and non collision of trains which follows from correct handover and new movement authority generation. ETCS \cite{AP09} itself has been modelled as a dynamical system with external disturbances and verified for safety in terms of collision avoidance, liveness, controllability and reactivity.
+There has been a large amount of work on the modelling and verification of ETCS using differential dynamic logic \cite{AP08} in the Keymaera tool \cite{AP08b}. The RBC handover where a train moves from the area governed by one RBC into another has been modelled in \cite{YL11}. The properties proven in this study include non-derailment and non-collision of trains which follows from correct handover and new movement authority generation. ETCS \cite{AP09} itself has been modelled as a dynamical system with external disturbances and verified for safety in terms of collision avoidance, liveness, controllability and reactivity.
 
 There are also several model checkers specifically for the verification of hybrid systems, including HyTech \cite{AR96} and PHAVer \cite{GF05}, which perform an exhaustive search of the state space to check that a given property holds. In contrast to these we concentrate on a modelling approach that results in a specification that is executable and allows for the verification of performance and safety properties.
 
 \section{Maude}
-In the following section we shall describe the term rewriting system Maude. It is a multi-purpose tool containing support for executable-specification, simulation and verification of systems and software. We make use of all 3 of these capabilities and it is this wide range which draws us towards its use. In order to fully understand its use in the specification of a real time system we first present a formal and informal definition of a Maude specification followed by an example Maude specification to give insight into theses definitions.
+In the following section we shall describe the term rewriting system Maude. It is a multi-purpose tool containing support for executable-specification, simulation and verification of systems and software. We make use of all three of these capabilities and it is this wide range which draws us towards its use. In order to fully understand its use in the specification of a real time system we first present a formal and informal definition of a Maude specification followed by an example Maude specification to give insight into these definitions.
 
 
 
@@ -33,33 +33,33 @@ sorts    & \texttt{sort} $s$ or \texttt{sorts}  $s \ s' .$ \\ \hline
 subsorts  & \texttt{subsort} $s < s' \ .$ \\ \hline
 function symbols  & \texttt{op} $f \ :  \ s_1 \ldots s_n$ \texttt{->} $s \ .$ \\ \hline
 variables  & \texttt{vars} $v \ v' : s' .$\\ \hline
-uncondition equations  &\texttt{eq} $t = t' .$\\ \hline
-condition equations & \texttt{ceq} t = t' \texttt{if} $cond$ \\ \hline
+unconditional equations  &\texttt{eq} $t = t' .$\\ \hline
+conditional equations & \texttt{ceq} t = t' \texttt{if} $cond$ \\ \hline
 membership axioms & \texttt{mb} $t \ : \ s \ .$ or \texttt{cmb} $t  \ : \ s$ \texttt{if} $cond \ .$  \\ \hline
 \end{tabular}
 \end{center}
 \medskip
-The data types of a Maude specification are defined using sorts with subtypes expressed as subsorts. Terms are constructed using function symbols and variables which are then  given behaviour using equations and conditional equations.  A maude specification is executed by rewriting, that is the system repeatedly applys rewriting rules to a term until the term can no longer be rewritten.
+The data types of a Maude specification are defined using sorts with subtypes expressed as subsorts. Terms are constructed using function symbols and variables which are then  given behaviour using equations and conditional equations.  A Maude specification is executed by rewriting, that is the system repeatedly applies rewriting rules to a term until the term can no longer be rewritten.
 
-%%% Read the Maude papers as this is currently very close to the description of a maude specification found in the RT maude theory paper.
+%%% Read the Maude papers as this is currently very close to the description of a Maude specification found in the RT Maude theory paper.
 \medskip
 \begin{mydef}[Equational Theory]
 An equational theory is a 2 tuple $(\Sigma, E)$ where $\Sigma$ is a set of sorts, subsorts and operator declarations  and $E$ is the set of equations modulo $\Sigma$
 \end{mydef}
 
-Equational theories \cite{JM98} form the signature of a Maude specification and provides one with a means to represent data types using various symbols. If we consider the natural numbers defined symbolically  as an equational theory, the set $\Sigma$ would consist of the sort $Nat$ and the operations $0$, $s$, and $+$, the set $E$ would consist of associativity and commutativity for $+$.
+Equational theories \cite{JM98} form the signature of a Maude specification and provide one with a means to represent data types using various symbols. If we consider the natural numbers defined symbolically  as an equational theory, the set $\Sigma$ would consist of the sort $Nat$ and the operations $0$, $s$, and $+$, the set $E$ would consist of associativity and commutativity for $+$.
 
 Formally a Maude specification is a \emph{rewrite theory} of the form $\mathfrak{R}=(\Sigma,E,L,R)$, where  $(\Sigma, E)$ is an equational theory, $L$ is a set of labels and $R$ is a set of labelled rewrite rules of the form:
 
 $$ [l] : t \to t' \ \mathbf{if} \bigwedge^{n}_{i = 1} u_i \to v_i \bigwedge^{m}_{j = 1} w_j = w'_j $$
 
-where $l$ is a label $l \in L$ and $t$, $t'$, $u_i$, $v_i$, $w_j$ and $w'_j$ are implicitly universally quantified variables representing $\Sigma$-terms. Maude theories are \emph{order-sorted} allowing for the specification of subsorts which is achieved by including into the specification a partial order relation over sorts. Given two sorts $s$ and $s'$ this partial order relation $s \leq s'$ is interpreted as subset inclusion $A_s \subseteq A_{s'}$ in a model $A$.
+where $l$ is a label $l \in L$ and $t$, $t'$, $u_i$, $v_i$, $w_j$ and $w'_j$ are implicitly universally quantified variables representing $\Sigma$-terms. Maude theories are \emph{order-sorted} allowing for the specification of subsorts. This is achieved by including a partial order relation over sorts into the specification. Given two sorts $s$ and $s'$ this partial order relation $s \leq s'$ is interpreted as subset inclusion $A_s \subseteq A_{s'}$ in a model $A$.
 
-The behaviour of the operations defined in an equational theory are defined in a rewrite theory using the labelled rewrite rules. In the case of the natural numbers it is then possible to provide an definition for $+$ recursively. The base case is where 0 is one of the operands in which case we return the other $0 + N \to N$. The successor case is that we have some non-zero operand represented as a successor to some variable $s(M)$ in which case we apply the successor function to the recursive call of addition with M and the other operand $s(M) + N \to s(M + N)$. 
+The behaviour of the operations defined in an equational theory is defined in a rewrite theory using the labelled rewrite rules. In the case of the natural numbers it is then possible to provide a definition for $+$ recursively. The base case is where $0$ is one of the operands in which case we return the other: $0 + N \to N$. The successor case is that we have some non-zero operand represented as a successor to some variable $s(M)$ in which case we apply the successor function to the recursive call of addition with $M$ and the other operand: $s(M) + N \to s(M + N)$. 
  
 
 \subsubsection{Example Maude Specification}
-We shall now give a small example specification in the form of the natural numbers in Maude in order to get a feel for the structure of such a specification. We see that the module BASIC-NAT is declared on the first line of the example (Code listing \ref{code:natnum}). Followed by a sort Nat which forms the type with which we will be working. Next several operations are declared which we use to define the natural numbers symbolically. Firstly, we see the 0 operator which forms our base constructor which is followed by another operation s which allows us to construct successive natural numbers. The addition operation $+$ is defined to be infix using variable place holders represented by an underscore in the declaration  $\_$. The behaviour of the addition operation is defined inductively using two variables N and M and two equations for the base and successor cases. In the base case is that zero added to any natural number results in that natural number. The successor case is that given a successor of some natural number $M$ that number can be added to a number $N$ by taking the successor of $N+M$.
+We shall now give a small example specification in the form of the natural numbers in Maude in order to get a feel for the structure of such a specification. We see that the module BASIC-NAT is declared on the first line of the example (Code listing \ref{code:natnum}). This is followed by a sort Nat which forms the type with which we will be working. Next several operations are declared which we use to define the natural numbers symbolically. Firstly, we see the $0$ operator which forms our base constructor which is followed by another operation s which allows us to construct successive natural numbers. The addition operation $+$ is defined to be infix using variable place holders represented by an underscore in the declaration:  $\_$. The behaviour of the addition operation is defined inductively using two variables $N$ and $M$ and two equations for the base and successor cases. The base case is that zero added to any natural number results in that natural number. The successor case is that given a successor of some natural number $M$ that number can be added to a number $N$ by taking the successor of $N+M$.
 
 \begin{lstlisting}[caption = The natural numbers in Maude, label = code:natnum]
 fmod BASIC-NAT is
@@ -80,12 +80,12 @@ endfm
 
 \section{Real Time Maude}
 Real Time Maude is an extension of Maude that can be used to model and verify hybrid systems. It contains specific support enabling the modelling and verification of real-timed and discrete timed systems. 
-The Real Time Maude system contains a general theory for time and several specifications of time, including discrete time based on the natural numbers and dense time based on the rationals, that implement that theory.
+The Real Time Maude system contains a general theory for time and several specifications of time that implement that theory, including discrete time based on the natural numbers and dense time based on the rationals.
 
 \subsection{Real Time Maude Specifications}
-A Real Timed Maude specification consists of \emph{timed modules} that start with \texttt{tmod} and end with \texttt{endtm}. Formally a Real Time Maude specification is a real-time rewrite theory which can be thought of as a rewrite theory with an interpretation for the abstract time domain together with rewrite rules for terms of type \texttt{System} that have a time duration \cite{PO02}. These rewrite rules can be separated into two categories, the \emph{tick} rules have a non-zero time elapse and the \emph{instantaneous} rules have a time elapse of zero.
+A Real Time Maude specification consists of \emph{timed modules} that start with \texttt{tmod} and end with \texttt{endtm}. Formally a Real Time Maude specification is a real-time rewrite theory which can be thought of as a rewrite theory with an interpretation for the abstract time domain together with rewrite rules for terms of type \texttt{System} that have a time duration \cite{PO02}. These rewrite rules can be separated into two categories: the \emph{tick} rules which have a non-zero time lapse and the \emph{instantaneous} rules which have a time lapse of zero.
 
-The interpretation of the abstract time domain is mapped to a concrete specification of time during the specification process. Real time Maude comes with two of these specifications as standard the most simple  is discrete time based on the natural numbers and the more complicated of the two is dense time based on the rational numbers. We shall use discrete time for the specification which will result in a smaller state space and therefore better model checking results during the verification process.
+The interpretation of the abstract time domain is mapped to a concrete specification of time during the specification process. Real Time Maude comes with two of these specifications as standard. The most simple  is discrete time based on the natural numbers and the more complicated of the two is dense time based on the rational numbers. We shall use discrete time for the specification which will result in a smaller state space and therefore better model checking results during the verification process.
 \medskip
 
 \begin{mydef}[Equational Theory Morphism]
@@ -120,11 +120,11 @@ We define a \emph{real-time rewrite theory} $\mathfrak{R}_{\phi,\tau}$ to be a t
 
 \item The time domain is functional i.e. if a term $r$ of sort $\phi(Time)$  has a rewrite proof $\alpha: r \to r'$ then $r = r'$ and the identity proof of $r$ is equivalent to $\alpha$.
 
-\item There is a designated sort typically called \textit{State} and a sort \textit{System}, contained within $(\Sigma, E)$, which has no supersorts or subsorts and only one operator that does not satisfy any non trivial equations:
+\item There is a designated sort typically called \textit{State} and a sort \textit{System}, contained within $(\Sigma, E)$, which have no supersorts or subsorts and only one operator that does not satisfy any non-trivial equations:
 
 $$\{\_\}: State \to System$$
 
-Further to this condition, it is all required that the sort \textit{System} does not appear in $s_1, \ldots s_n$ the domain  of  any operator $f: s_1, \ldots s_n$.
+Further to this condition, it is required that the sort \textit{System} does not appear in $s_1, \ldots s_n$  or the domain  of  any operator $f: s_1, \ldots s_n$.
 
 \item For each rewrite rule with $u$ and $u'$ of sort \textit{System} in $\mathfrak{R}$ of the following form\footnote{All other rules which are not of this form are called \emph{local} rules and have an instantaneous zero time elapse. These do not act on the system as a whole but rather on one or more of its components.}:
 $$[l]: u(x_1,\ldots ,x_n) \to u'(x_1,\ldots ,x_n if C(x_1, \ldots ,x_n) \ \textbf{if} \ C(x_1, \ldots ,x_n)$$
