--- a/Maude.tex
+++ b/Maude.tex
@@ -421,7 +421,7 @@ fmod SET{X :: TRIV} is
 
 \end{lstlisting}
 
-The individual elements in the set are themselves are a subsort of set, allowing for sets to be constructed using the union operator \texttt{\_,\_} and singleton sets. The in operation computes set membership and is based on the \texttt{otherwise}  meaning that false case will only be applied once the search for true case has been exhausted.
+The individual elements in the set are themselves are a subsort of set, allowing for sets and singleton sets to be constructed using the union operator \texttt{\_,\_} . The \texttt{in} operation computes set membership and one of its equations is tagged with \texttt{owise}, meaning that the false case will only be applied once the search for true case has been exhausted.
 
 \begin{lstlisting}[caption = The specification of the Map data type in Maude]
 fmod MAP{X :: TRIV, Y ::  TRIV} is
@@ -456,7 +456,7 @@ eq (M, D |-> R) [D]
    = if  $hasMapping(M, D) then undefined else R fi .
 eq M[D] = undefined [owise] .
 \end{lstlisting}
-A Map from type $X$ to type $Y$ consists of entries constructed using the $\_|->\_$ operation on an element of type $X$ and an element of type $Y$. These entries are composed together using the commutative and associative opertation $\_,\_$ to form a Map.  
+A Map from type $X$ to type $Y$ consists of entries constructed using the $\_|->\_$ operation on an element of type $X$ and an element of type $Y$. These entries are composed together using the commutative and associative operation $\_,\_$ to form a Map.  
 
 When we use a parametrised data type in a specification it is possible to assign a new sort to the particular parametrised instance of the map or set that we are using.
 \begin{center}
@@ -468,7 +468,7 @@ When we use a parametrised data type in a specification it is possible to assign
 
 
 \subsubsection*{Modelling the Radio Block Processor}
-The RBC is slightly differently from the hybrid automaton described previously. Instead of having four states the RBC has three states with the behaviour of the granted state being combined into the behaviour of a transition which causes the RBC to leave the wait state. The when the RBC receives a track segment grant from the interlocking it immediately grants the movement authority before going back to the idle state.
+The RBC is slightly different from the hybrid automaton described previously. Instead of having four states the RBC has three states with the behaviour of the granted state being combined into the behaviour of a transition which causes the RBC to leave the wait state. When the RBC receives a track segment grant from the interlocking it immediately grants the movement authority before going back to the idle state.
  
 \begin{lstlisting}[caption = The RBC state and class definition in Maude]
 sort RBCState .
@@ -477,7 +477,7 @@ class RBC | state : RBCState, lasttrain : Oid, ma : MapON,
       pos : MapON , curreq : SetO .
 \end{lstlisting}
 
-We use maps to store the current movement authorities and positions of the various trains. In order to prevent an infinite amount of requests being made to an interlocking we limit the RBC to make one request on behalf of each train to the interlocking.  To do this we use  \texttt{curreq}, a set of oids, to store which trains have had a request made for them at a given moment of time.
+We use maps to store the current movement authorities and positions of the various trains. In order to prevent an infinite amount of requests being made to an interlocking we limit the RBC to make one request on behalf of each train to the interlocking.  To do this we use  \texttt{curreq}, a set of Oids, to store which trains have had a request made for them at a given moment of time.
 
 An example RBC transition is as follows:
 \begin{lstlisting}[caption = The state transition for the granting of a movement authority]
@@ -491,7 +491,7 @@ rl [rbcgrant] : {grant(N) < O : RBC | state : wait,
 This transition captures two of the state transitions in our RBC automaton. Once the interlocking has granted a request to the RBC for track segment $N$ the RBC immediately proceeds to simultaneously update the movement authority mapping entry for that train and issues a \texttt{grantma} message to that train with a new movement authority for the end of track segment $N$.
 
 \subsubsection*{Modelling the Interlocking}
-An interlocking has two states, either it is idle or it has received a request for a movement authority and must respond. We define an Interlockings state and class in Real Time Maude as follows:
+An interlocking has two states: either it is idle or it has received a request for a movement authority and must respond. We define an interlockings state and class in Real Time Maude as follows:
 
 \begin{lstlisting}[caption = The interlocking class and states in Maude]
 sort InterState .
@@ -501,10 +501,9 @@ class Inter | state : InterState, reqid : Nat,
       t3 : Bool, t4 : Bool .
 \end{lstlisting}
 
-The sort \texttt{InterState} models the state of the interlocking along with two constant operations idle and res which represent the two states. The interlocking class consists of a interlocking state, a request id which stores the current track segment requestions and 5 Booleans which indicate whether or not a track segment is occupied. We define an Interlocking class in Real Time Maude as follows:
+The sort \texttt{InterState} models the state of the interlocking along with two constant operations \texttt{idle} and \texttt{res} which represent the two states. The interlocking class consists of a interlocking state, a request id which stores the current track segment requestions and five booleans which indicate whether or not a track segment is occupied. 
 
-
-All of the rewrite rules on Interlocking objects are instantaneous and do not effect the transition of time.  We can split these rules into two types. Firstly there are interlocking rules that deal with the transition of a train from one track segment to another. Secondly there are several rewriting rules that deal with granting or denying a received request. There is currently a rule for both denying and granting a request for each track segment depending on the value of the boolean variable.
+All of the rewrite rules on interlocking objects are instantaneous and do not affect the transition of time.  We can split these rules into two types. Firstly there are interlocking rules that deal with the transition of a train from one track segment to another. Secondly there are several rewriting rules that deal with granting or denying a received request. There is currently a rule for both denying and granting a request for each track segment depending on the value of the boolean variable.
 
 \begin{lstlisting}[caption = The interlocking transition which grants a track segment request]
 rl [resreq1g] : {< O : Inter | state : res, t
@@ -513,7 +512,7 @@ rl [resreq1g] : {< O : Inter | state : res, t
 \end{lstlisting}
 
 \section{Extension to a Small Junction}
-The modelling approach used to model the pentagon example (see fig. \ref{fig:pentagon2}) has been extended to model a small junction (see fig.~\ref{fig:junctionexample}). The main differences with the previous approach is that this junction is an open track and therefore the trains have the ability to enter and exit. To capture this we have specified a controller object which contains a schedule of the trains to enter the track. This object negotiates the joining of the trains to the track with the RBC. It also has two routes for the trains to follow and the interlocking and RBC have been modified to capture this behaviour.  In Chapter \ref{chap:verifyertms} we will use the Maude LTL model checker to verify the safety condition "A point does not move if it is in a movement authority".
+The modelling approach used to model the pentagon example (see fig. \ref{fig:pentagon2}) has been extended to model a small junction (see fig.~\ref{fig:junctionexample}). The main difference with the previous approach is that this junction is an open track and therefore the trains have the ability to enter and exit. To capture this we have specified a controller object which contains a schedule of the trains to enter the track. This object negotiates the joining of the trains to the track with the RBC. It also has two routes for the trains to follow and the interlocking and RBC have been modified to capture this behaviour.  In Chapter \ref{chap:verifyertms} we will use the Maude LTL model checker to verify the safety condition "A point does not move if it is in a movement authority".
  
 \subsection*{Junction Example}
 The junction example consists of one point, two routes, seven track segments, a controller object to schedule trains, an RBC and an interlocking.
@@ -556,14 +555,14 @@ class Controller |
       trainorder : ListT, trainmax : MapON, trainroute : MapON .
 \end{lstlisting}
 
-The controller class contains 3 parameters which are used to store a list of trains that are going to enter the track. The first parameter \textbf{trainorder} stores a list of object identifiers that are used to name trains whilst the order of the list corresponds to the order in which the trains are added to the track. The other two parameters of the controller class are both mappings from object identifiers to natural numbers. These mappings \textbf{trainmax} and \textbf{trainroute} are used to store the two parameters needed to create the train class namely the trains maximum speed and its route.
+The controller class contains three parameters which are used to store a list of trains that are going to enter the track. The first parameter \texttt{trainorder} stores a list of object identifiers that are used to name trains whilst the order of the list corresponds to the order in which the trains are added to the track. The other two parameters of the controller class are both mappings from object identifiers to natural numbers. These mappings \texttt{trainmax} and \texttt{trainroute} are used to store the two parameters needed to create the train class, namely the trains maximum speed and its route.
 
-The controller object makes one join request, using a \textbf{reqjoin} message containing the object identifier of the first train in the trainorder list and its associated route, to the RBC per unit of time . If this request is granted then the first object identifier in the trainorder list is removed and a new train object is created with that object identifier with its maxspeed and route obtained from the mappings in the controller object. The speed and distance of the new train are both set to zero and a message is sent to the interlocking indicating that the initial track segment is now occupied. 
+The controller object makes one join request, using a \texttt{reqjoin} message containing the object identifier of the first train in the \texttt{trainorder} list and its associated route, to the RBC per unit of time. If this request is granted then the first object identifier in the \texttt{trainorder} list is removed and a new train object is created with that object identifier with its maximum speed and route obtained from the mappings in the controller object. The speed and distance of the new train are both set to zero and a message is sent to the interlocking indicating that the initial track segment is now occupied. 
 
 \subsection*{Modified Trains, Interlockings and Radio Block Processors}
-The component classes from the pentagon example have been modified to capture the behaviour of a junction.  The train class has seen the least modification, with only one additional parameter route which stores a natural number corresponding to the trains route. The RBC class has been modified to include a additional mapping from object identifiers to the natural numbers that contains the route of each train. The number of states of an RBC has increased from 3 to 4 with an extra state $\mathbf{waitjoin}$ capturing that a join request has been made. When a join request is made the RBC checks to see if the route requested is currently set. If the route requested is set and the initial track segment is clear then the join request is accepted. If the route is not set then the RBC checks with the interlocking that it can set the route. This requires that the first 3 track segments are clear in order to change the direction of the point. The interlocking class has been modified to capture both the behaviour of the point and the addition of join requests. The point is modelled in the interlocking as two boolean variables $\mathbf{p1n}$ which indicates that the point is driven normal and $\mathbf{p1r}$ which indicates that the point is driven in the reverse direction.
+The component classes from the pentagon example have been modified to capture the behaviour of a junction.  The train class has seen the least modification, with only one additional parameter route which stores a natural number corresponding to the train's route. The RBC class has been modified to include a additional mapping from object identifiers to the natural numbers that contains the route of each train. The number of states of an RBC has increased from three to four with an extra state $\mathbf{waitjoin}$ capturing that a join request has been made. When a join request is made the RBC checks to see if the route requested is currently set. If the route requested is set and the initial track segment is clear then the join request is accepted. If the route is not set then the RBC checks with the interlocking that it can set the route. This requires that the first three track segments are clear in order to change the direction of the point. The interlocking class has been modified to capture both the behaviour of the point and the addition of join requests. The point is modelled in the interlocking as two boolean variables: $\mathbf{p1n}$ which indicates that the point is driven normal and $\mathbf{p1r}$ which indicates that the point is driven in the reverse direction.
 %
-The RBC has been modified to process any requests in one time step using an operation $\mathbf{nondelta}$ which prevents the transition of time in any non idle state. This removes the possibility for train to take an arbitrary amount of time to respond to a request, significantly cutting down on the state space.
+The RBC has been modified to process any requests in one time step using an operation $\mathbf{nondelta}$ which prevents the transition of time in any non-idle state. This removes the possibility for a train to take an arbitrary amount of time to respond to a request, significantly cutting down on the state space.
 
 
 
